# messenger

./: .gitignore  client.py  db.env  docker-compose.yml  web.env
messenger/: Cargo.toml  Dockerfile
nginx/: Dockerfile  messenger.conf
web/: Dockerfile
web/messenger/: Cargo.toml
web/messenger/src/: db.rs  handlers.rs  lib.rs  main.rs  models.rs  schema.rs
