[package]
name = "messenger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.130", features = ["derive"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
