[package]
name = "messenger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix = "0.13"
actix-web-actors = "4.1"
serde = { version = "1.0.130", features = ["derive"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
